--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,12 +1,13 @@
 :root {
-  --color-bg: white;
-  --color-text: #222;
-  --color-primary: teal;
+  --color-bg: #f0f0f0;
+  --color-text: #994cc3;
+  --color-primary: #ef5350;
+  --color-secondary: #0c969b;
+  --color-header-bg: rgba(255, 255, 255, 0.9);
 }
 
 html {
   box-sizing: border-box;
-  font-size: 10px;
   color: #222222;
 }
 
@@ -18,28 +19,23 @@ html {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-size: 2rem;
+  line-height: 1;
   background: var(--color-bg);
   color: var(--color-text);
-  transition: background 1s, color 0.3s;
+  transition: background 0.8s, color 0.8s;
 }
 
 button {
-  background: none;
-  color: var(--color-primary);
-  border: 2px solid var(--color-primary);
-  padding: 1rem 1.5rem;
-  font-size: 1.2rem;
+  background: var(--color-secondary);
+  color: white;
+  border: none;
+  padding: 10px 15px;
   border-radius: 4px;
-  font-size: 1.5rem;
+  font-size: 1rem;
   letter-spacing: 1px;
-  font-weight: 600;
+  font-weight: 700;
   text-transform: uppercase;
-  transition: background 1s, color 1s, border-color 0.3s;
+  cursor: pointer;
 }
 
 h1,
@@ -53,11 +49,12 @@ h6 {
 }
 
 p {
-  margin: 0 0 1rem 0;
+  margin: 0 0 0.5rem 0;
 }
 
 a {
   text-decoration: none;
+  color: var(--color-secondary);
 }
 
 img {
