--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -79,10 +79,19 @@ td {
   border: none;
 }
 
+.site {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 main {
+  align-self: center;
+  width: 100%;
   max-width: 1200px;
   margin: 0 auto;
   padding: 10px;
+  flex: 1;
 }
 
 menu {
